src/headfirst/decorator/starbuzz/20160330.txt
4_decorator

커피의 종류가 늘어날수록 상속이 많아져요~

@startuml
class Beverage{
}
Beverage<|-- HouseBlend
Beverage <|--DarkRoast
Beverage <|--Decaf
@enduml

오늘 수업은 너무너무 졸리당~~으아아아ㅏ
빨리 코코낸내를 하고싶당
내일은 9시 수업이네
눙물~~~



---------------------------------------------------------------------

admin@DESKTOP-PKOJ4ES MINGW64 ~
$ cd Documents/

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents
$ cd oej/

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej
$ cd Code/

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code
$ cd j16/

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16
$ cd myrepo1/

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git status
On branch master
Untracked files:
  (use "git add <file>..." to include in what will be committed)

        "\354\236\220\353\260\224\354\213\244\355\226\211.txt"

nothing added to commit but untracked files present (use "git add" to track)

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git add \354\236\220\353\260\224\354\213\244\355\226\211.txt
fatal: pathspec '354236220353260224354213244355226211.txt' did not match any fil   es

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git commit -m "java"
On branch master
Untracked files:
        "\354\236\220\353\260\224\354\213\244\355\226\211.txt"

nothing added to commit but untracked files present

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git status
On branch master
Untracked files:
  (use "git add <file>..." to include in what will be committed)

        "\354\236\220\353\260\224\354\213\244\355\226\211.txt"

nothing added to commit but untracked files present (use "git add" to track)

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git status
On branch master
Untracked files:
  (use "git add <file>..." to include in what will be committed)

        java start.txt

nothing added to commit but untracked files present (use "git add" to track)

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git add java start.txt
fatal: pathspec 'java' did not match any files

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git commit -m "java start"
On branch master
Untracked files:
        java start.txt

nothing added to commit but untracked files present

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git push origin master
Everything up-to-date

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git status
On branch master
Untracked files:
  (use "git add <file>..." to include in what will be committed)

        src/com/j2/java start.txt

nothing added to commit but untracked files present (use "git add" to track)

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git status
On branch master
Untracked files:
  (use "git add <file>..." to include in what will be committed)

        src/com/j2/java_start.txt

nothing added to commit but untracked files present (use "git add" to track)

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git add src/com/j2/java_start.txt

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git commit -m "java"
[master 1853a67] java
 1 file changed, 15 insertions(+)
 create mode 100644 src/com/j2/java_start.txt

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ git push origin master
Counting objects: 6, done.
Delta compression using up to 4 threads.
Compressing objects: 100% (6/6), done.
Writing objects: 100% (6/6), 700 bytes | 0 bytes/s, done.
Total 6 (delta 4), reused 0 (delta 0)
To https://github.com/oheunjuu/homework.git
   8cb8ac2..1853a67  master -> master

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ java -jar lib/drjava-stable-20140826-r5761.jar &
[1] 708

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ javac -d classes/ -cp classes/\;lib/aplu5.jar src/ src/headfirst/decorator/sta   rbuzz/StarbuzzCoffee.java
javac: invalid flag: src/
Usage: javac <options> <source files>
use -help for a list of possible options

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ javac -d classes/ -cp classes/\;lib/aplu5.jar -sourcepath src/ src/headfirst/d   ecorator/starbuzz/StarbuzzCoffee.java
src\headfirst\decorator\starbuzz\StarbuzzCoffee.java:17: error: ';' expected
    return 1,99;
            ^
src\headfirst\decorator\starbuzz\StarbuzzCoffee.java:26: error: illegal start of    expression
    return ,99;
           ^
src\headfirst\decorator\starbuzz\StarbuzzCoffee.java:26: error: not a statement
    return ,99;
            ^
3 errors

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ javac -d classes/ -cp classes/\;lib/aplu5.jar -sourcepath src/ src/headfirst/d   ecorator/starbuzz/StarbuzzCoffee.java
src\headfirst\decorator\starbuzz\StarbuzzCoffee.java:9: error: abstract methods    cannot have a body
  public abstract double cost(){}
                         ^
src\headfirst\decorator\starbuzz\StarbuzzCoffee.java:29: error: CondimentDecorat   or is not abstract and does not override abstract method getDescription() in Con   dimentDecorator
class CondimentDecorator extends Beverage{
^
src\headfirst\decorator\starbuzz\StarbuzzCoffee.java:64: error: cannot find symb   ol
    Beverage wmd=new Whip(m);
                          ^
  symbol:   variable m
  location: class StarbuzzCoffee
src\headfirst\decorator\starbuzz\StarbuzzCoffee.java:65: error: variable wmd is    already defined in method main(String[])
    Beverage wmd=new Whip(new Mocha(new DarkRoast()));
             ^
4 errors

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ javac -d classes/ -cp classes/\;lib/aplu5.jar -sourcepath src/ src/headfirst/d   ecorator/starbuzz/StarbuzzCoffee.java
src\headfirst\decorator\starbuzz\StarbuzzCoffee.java:29: error: CondimentDecorat   or is not abstract and does not override abstract method getDescription() in Con   dimentDecorator
class CondimentDecorator extends Beverage{
^
src\headfirst\decorator\starbuzz\StarbuzzCoffee.java:64: error: cannot find symb   ol
    Beverage wmd=new Whip(m);
                          ^
  symbol:   variable m
  location: class StarbuzzCoffee
src\headfirst\decorator\starbuzz\StarbuzzCoffee.java:65: error: variable wmd is    already defined in method main(String[])
    Beverage wmd=new Whip(new Mocha(new DarkRoast()));
             ^
3 errors

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ javac -d classes/ -cp classes/\;lib/aplu5.jar -sourcepath src/ src/headfirst/d   ecorator/starbuzz/StarbuzzCoffee.java
src\headfirst\decorator\starbuzz\StarbuzzCoffee.java:29: error: CondimentDecorat   or is not abstract and does not override abstract method getDescription() in Con   dimentDecorator
class CondimentDecorator extends Beverage{
^
1 error

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ javac -d classes/ -cp classes/\;lib/aplu5.jar -sourcepath src/ src/headfirst/decorator/starbuzz/StarbuzzCoffee.java

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$ java -cp classes/ headfirst.decorator.starbuzz.StarbuzzCoffee
Dark Roast Coffee, Mocha,Whip
1.29

admin@DESKTOP-PKOJ4ES MINGW64 ~/Documents/oej/Code/j16/myrepo1 (master)
$
